fix: z-index 100

--- a/engagement/css/style.css
+++ b/engagement/css/style.css
@@ -8,7 +8,7 @@
 }
 
 #slide.close-invitation {
-    z-index: 6;
+    z-index: 100;
 }
 
 #slide.open-invitation {
